--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 
 <!--引入JS文件-->
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="./js/lib/jquery.js"></script>
 <script type="text/javascript" src="./js/lib/jquery.fullPage.js"></script>
 <script type="text/javascript" src="./js/main.js"></script>
 <script src='./js/lib/move.js'></script>
