--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+<div id="music"></div>
+
 <!--fullpage.js框架固定结构-->
 <div id="story">
     <div class="section p1">
@@ -93,6 +95,10 @@
         </p>
     </div>
 </div>
+<audio src="http://link.hhtjim.com/163/452106404.mp3" autoplay="autoplay" loop="loop">
+浏览器该更新啦~
+</audio>
+
 
 <!--引入JS文件-->
 <script src="./js/lib/jquery.js"></script>
