add viewport and description
add viewport, description and author.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maxmum-scale=1">
+    <meta name="description" content="Story of Girl, fullpage, move.js, 移动端web">
+    <meta name="author" content="Leon, czlight@foxmail.com">
     <title>Story</title>
     <link rel="stylesheet" href="css/jquery.fullPage.css">
     <link rel="stylesheet" href="css/main.css">
